Fix contrast in questions items

--- a/web/app/assets/stylesheets/welcome/application.scss
+++ b/web/app/assets/stylesheets/welcome/application.scss
@@ -321,7 +321,7 @@
     font-weight: bold;
     font-size: 18px;
     line-height: 22px;
-    color: $brand-color;
+    color: darken($brand-color, 10%);
     cursor: pointer;
     width: 100%;
     height: 100%;
